# CVTailor

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  cv.md  cv_4_llm.md  pyproject.toml  requirements.txt
ai/: llm.py  prompts.py
examples/: cv.md  cv_compared.html  cv_revised.md  job_description.txt  test_api_review.py  test_template.py
models/: comparison_cv_fields.py  input_cv_fields.py  job_description_fields.py  revised_cv_fields.py
services/: cv.md  cv_4_llm.md  cv_tailor_service.py
src/app/: main.py
src/app/api/v1/endpoints/: cover_letter.py  improve_section.py  tailor_cv.py
src/app/dependencies/: common.py
src/core/: config.py
src/core/ai/: helpers.py  llm.py  prompts.py
src/core/cv_builders/: comparison_cv_builder.py
src/core/examples/: cv.html  cv.md  cv_4_llm.md  cv_compared.html  cv_revised.md  test_api_review.py  test_template.py
src/core/models/: comparison_cv_fields.py  input_cv_fields.py  job_description_fields.py  revised_cv_fields.py
src/core/services/: base_service.py  cover_letter_service.py  cv_tailor_service.py  improve_cv_section_service.py
src/core/services/functional/: cv_tailor_service_functional.py
src/core/templates/: html_cv_template.py  md_revised_cv_template.py
src/core/templates/renderers/: llm.py
src/core/utils/: exceptions.py
templates/: html_cv_template.py  md_cv_template.py  md_cv_template_to_llm.py  md_job_description_template.py  md_revised_cv_template.py
tests/: conftest.py
tests/models/: test_input_cv_fields.py  test_revised_cv_fields.py
utils/: exceptions.py
