[project]
name = "cvtailor"
version = "0.1.0"
description = "CV Tailoring application"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.16.1",
    "jinja2~=3.1.6",
    "loguru>=0.7.3",
    "phonenumbers>=9.0.6",
    "protobuf~=6.31.0",
    "pydantic[email]~=2.11.4",
    "pydantic-extra-types>=2.10.4",
    "pydantic-settings>=2.9.1",
    "python-dotenv~=1.1.0",
    "tenacity>=9.1.2",
    "async-lru>=2.0.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.11",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 88
extend-exclude = [
    "src/core/examples/",
    "src/core/ai/prompts.py",
    "src/core/templates/"
]

[tool.ruff.lint]
select = ["I"]

[tool.ruff.format]
docstring-code-format = false

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
args = ["src", "tests"]
exclude = ["src/core/examples/"]
